# compresshot

./: package-lock.json  package.json
src/: App.css  App.tsx  Crop.css  Crop.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  screenshot.rs
src/hooks/: useWindowSize.ts
