[package]
name = "compresshot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-resizable", "window-set-always-on-top", "window-set-decorations", "window-start-dragging", "window-show", "window-set-cursor-grab", "window-set-cursor-icon", "window-hide", "window-set-icon", "window-set-cursor-visible", "window-maximize", "window-close", "window-minimize", "window-set-cursor-position", "window-set-fullscreen", "protocol-asset", "path-all", "fs-copy-file", "dialog-save", "dialog-open", "fs-remove-file", "fs-read-file", "fs-read-dir", "fs-write-file", "fs-rename-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
